deployment/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: csp-api
spec:
  selector:
    matchLabels:
      app: dotnetcore
      role: backend
  replicas: 1
  template:
    metadata:
      name: csp-api-deployment
      labels:
        app: dotnetcore
        role: backend
        env: develop
    spec:
      containers:
      - name: csp-api
        image: gcr.io/gcr-project/sample:1.0.0
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /api/CSP/Organization
            port: 80
          initialDelaySeconds: 20
          timeoutSeconds: 20
          periodSeconds: 20
          successThreshold: 1
        ports:
        - name: csp-api-port
          containerPort: 3000
