deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: csp-api-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: dotnetcore
    role: backend
