deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: my-cert-issuer
  name: csp-api-ingress
spec:
  backend:
    serviceName: csp-api-service
    servicePort: 80
  rules:
  - host: csp.cvcomp.et6bw.gebeya.co
    http:
      paths:
      - backend:
          serviceName: csp-api-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - csp.cvcomp.et6bw.gebeya.co
    secretName: csp-api-tls
